--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
->> geometric planning cost HAVE TO consider jspace
+>> grasp planner can use randomized sampling strategy for discretization.
+>> migrate to MoveIt! on Groovy
 >> typedef typename graph_traits<GPMGraph>::vertex_descriptor Vertex; VS typedef typename GPMGraph::vertex_descriptor Vertex;
->> debug for tidying up with >= 5objects
->> build object config. file + its parser
 ===
 >> grasp_planner should receive information about jspace used. 
 >> data path, dot paths, e.g. task graph, tmm should be in global variables set at .launch or centralized
 >> adjust hiro_joint_controller.cpp to accept different jspaces
+>> build object config. file + its parser
+>> debug for tidying up with >= 5objects
+>> geometric planning cost HAVE TO consider jspace
