--- a/learning_machine/data/readme
+++ b/learning_machine/data/readme
@@ -1,3 +1,12 @@
 >> for creating metadata containing features from the upper bound planning horizon.
 
+>> /hot directory
+is used by the svr in prediction
+
 >> tmm_paths.yaml contains tmm_paths for obtaining training data
+
+>> svm.20130308.libsvmmodel
+is trained with data collected offline from baseline/v.2
+
+>> about lwpr model
+it is initialized with a model set/tuned in matlab
